github_data_collector/src/data/issue_comment/relativty_Relativ.txt
In Arduino IDE, when trying to compile the code, and error message, "min was not declared in this scope" pops up. Any Solution?

The Full Error Messages:

Arduino: 1.8.10 (Windows 10), Board: "Generic STM32F103C series, STM32F103C8 (20k RAM. 64k Flash), STM32duino bootloader, 72Mhz (Normal), Smallest (default)"

sketch\I2Cdev_PillPatch.cpp: In static member function 'static int8_t I2Cdev::readBytes(uint8_t, uint8_t, uint8_t, uint8_t*, uint16_t)':

I2Cdev_PillPatch.cpp:276:50: error: 'min' was not declared in this scope

             for (uint8_t k = 0; k < length; k += min<int>(length, BUFFER_LENGTH)) {

                                                  ^

I2Cdev_PillPatch.cpp:276:54: error: expected primary-expression before 'int'

             for (uint8_t k = 0; k < length; k += min<int>(length, BUFFER_LENGTH)) {

                                                      ^

I2Cdev_PillPatch.cpp:276:54: error: expected ')' before 'int'

I2Cdev_PillPatch.cpp:276:57: error: expected unqualified-id before '>' token

             for (uint8_t k = 0; k < length; k += min<int>(length, BUFFER_LENGTH)) {

                                                         ^

I2Cdev_PillPatch.cpp:693:59: error: expected '}' at end of input

 uint16_t I2Cdev::readTimeout = I2CDEV_DEFAULT_READ_TIMEOUT;

                                                           ^

C:\Users\dogsp\Desktop\Relativ-master\STM32\STM32_BlackPill\STM32_BlackPill.ino: In function 'void setup()':

STM32_BlackPill:48:14: error: 'class TwoWire' has no member named 'setSDA'

         Wire.setSDA(PB7);

              ^

STM32_BlackPill:49:14: error: 'class TwoWire' has no member named 'setSCL'

         Wire.setSCL(PB6);

              ^

Multiple libraries were found for "Wire.h"
 Used: C:\Users\dogsp\AppData\Local\Arduino15\packages\stm32duino\hardware\STM32F1\2019.12.31\libraries\Wire
 Not used: C:\Users\dogsp\AppData\Local\Arduino15\packages\stm32duino\hardware\STM32F1\2019.12.31\libraries\WireSlave
exit status 1
'min' was not declared in this scope

This report would have more information with
"Show verbose output during compilation"
option enabled in File -> Preferences.

As the result of living in China, I can't connect relativty.net for more detail to build this great project.
Could you please post the content in that web site on github ?
Does this headset support Asynchronous Timewarp (Reprojection)?
Hello, trying to compile the sketch I get the following error:


**************************************

main:133:9: error: 'VectorFloat16' was not declared in this scope

         VectorFloat16 down;

         ^

main:134:28: error: 'down' was not declared in this scope

         mpu.dmpGetGravity(&down, &q);

                            ^

exit status 1
'VectorFloat16' was not declared in this scope
 
**************************************


How can I correct it?

Thanks, regards
Following the **Microsoft Compiler Warning (level 4) C4239**

The **relativ_osvr_plugin/Relativ_OSVR_Plugin.cpp** code fails to compile on any OS except Windows with this error:
```error: cannot bind non-const lvalue reference of type ‘serial::Timeout&’ to an rvalue of type ‘serial::Timeout’ ```

To resolve this, **Кзобьтовскый** created this fix:

 ``` 
Line 57
relativ.setTimeout(serial::Timeout::simpleTimeout(1000)); 
```

replace the whole of Line 57 with this:

```
serial::Timeout sto = serial::Timeout::simpleTimeout(1000);
relativ.setTimeout(sto);
```
